@@ -1,0 +1,22 @@
+{% macro t(key) %}{{ {
+  "language": "he",
+  "direction": "rtl",
+  "clipboard.copy": "העתק ללוח",
+  "clipboard.copied": "הועתק ללוח",
+  "edit.link.title": "ערוך דף זה",
+  "footer.previous": "קודם",
+  "footer.next": "הַבָּא",
+  "meta.comments": "הערות",
+  "meta.source": "מָקוֹר",
+  "search.language": "",
+  "search.pipeline.stopwords": false,
+  "search.pipeline.trimmer": false,
+  "search.placeholder": "לחפש",
+  "search.result.placeholder": "הקלד כדי להתחיל לחפש",
+  "search.result.none": "אין מסמכים תואמים",
+  "search.result.one": "1 מסמך תואם",
+  "search.result.other": "# מסמך תואם",
+  "skip.link.title": "דלג לתוכן",
+  "source.link.title": "עבור אל מאגר",
+  "toc.title": "תוכן העניינים"
+}[key] }}{% endmacro %}
