@@ -1,6 +1,7 @@
 mkdocs-material-2.7.0 (2018-03-06)
 
   * Added ability to set absolute URL for logo
+  * Added Hebrew translations
 
 mkdocs-material-2.6.6 (2018-02-22)
 
